adds bootstrap theme and custom styling

--- a/app/app.css
+++ b/app/app.css
@@ -9,3 +9,22 @@ body {
 .url-form {
   margin-left: 20px;
 }
+
+.masonry {
+  -moz-column-count: 4;
+  -webkit-column-count: 4;
+  column-count: 4;
+  -moz-column-gap: 1em;
+  -webkit-column-gap: 1em;
+  column-gap: 1em;
+}
+
+.item {
+  display: inline-block;
+  margin: 0 0 1em;
+  width: 100%;
+}
+
+.panel {
+  padding: 10px;
+}
