--- a/app/components/events/eventsView.html
+++ b/app/components/events/eventsView.html
@@ -1,18 +1,19 @@
-<div class="panel">
-  <form class="form-inline" ng-submit="getUrl()">
-    <a ui-sref=".list" class="btn btn-default btn-lg">
-      <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-    </a>
-    <a ui-sref=".grid" class="btn btn-default btn-lg">
-      <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
-    </a>
+<div class="col-md-8">
+  <div class="panel">
+    <form class="form-inline" ng-submit="getUrl()">
+      <a ui-sref=".list" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+      </a>
+      <a ui-sref=".grid" class="btn btn-default btn-lg">
+        <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+      </a>
 
-    <div class="form-group url-form">
-      <label>URL:</label>
-      <input ng-model="url" type="text" class="form-control" placeholder="Enter the url for an events site">
-    </div>
-    <button type="submit" class="btn btn-default">Get Events</button>
-  </form>
+      <div class="form-group url-form">
+        <input ng-model="url" type="text" class="form-control" placeholder="Enter the url for an events site">
+      </div>
+      <button type="submit" class="btn btn-primary">Get Events</button>
+    </form>
+  </div>
+
+  <div ui-view></div>
 </div>
-
-<div ui-view></div>
