--- a/app/components/events/gridView.html
+++ b/app/components/events/gridView.html
@@ -1,9 +1,7 @@
-<ul class="row list-unstyled">
-  <li class="col-xs-6 col-md-3" ng-repeat="event in events">
-    <div class="thumbnail">
-      <p><strong>{{event.description}}</strong></p>
-      <p>{{event.time}}</p>
-      <p>{{event.locaton}}</p>
-    </div>    
-  </li>
-</ul>
+<div class="masonry row">
+  <div class="item panel" ng-repeat="event in events">
+    <p><strong>{{event.description}}</strong></p>
+    <p>{{event.time}}</p>
+    <p>{{event.locaton}}</p>
+  </div>
+</div>
