add sfmoma scraper

--- a/app/components/events/gridView.html
+++ b/app/components/events/gridView.html
@@ -2,6 +2,6 @@
   <div class="item panel" ng-repeat="event in events">
     <p><strong>{{event.description}}</strong></p>
     <p>{{event.time}}</p>
-    <p>{{event.locaton}}</p>
+    <p>{{event.location}}</p>
   </div>
 </div>
