--- a/app/components/events/listView.html
+++ b/app/components/events/listView.html
@@ -3,7 +3,7 @@
     <div class="panel" ng-repeat="event in events">
       <p><strong>{{event.description}}</strong></p>
       <p>{{event.time}}</p>
-      <p>{{event.locaton}}</p>
+      <p>{{event.location}}</p>
     </div>
   </div>
 </div>
